# easy-socket-cpp

./: .gitignore  CMakeLists.txt  README.md  linux-compile.sh  sock.cpp  sock.h
config/: VersionInfo.rc.in  easy-socket-config.cmake.in  easy-socket.pc.in
examples/: client_example.cpp  server_example.cpp
